# CarpeDeam

./: .gitignore  CMakeLists.txt  README.md  description.txt
data/: guidedNuclAssemble.sh  guidedNuclAssemble_old.sh  nuclassemble.sh
lib/libgab/: CMakeLists.txt  README.md  libgab.cpp  libgab.h  testUtils.cpp
lib/mmseqs/src/: CommandDeclarations.h  MMseqsBase.cpp
lib/mmseqs/src/alignment/: Alignment.cpp  Alignment.h  Matcher.cpp  Matcher.h  rescorediagonal.cpp
lib/mmseqs/src/clustering/: ClusteringAlgorithms.cpp
lib/mmseqs/src/commons/: Command.h  DBConcat.cpp  DBReader.cpp  DBReader.h  DBWriter.cpp  DBWriter.h  Debug.h  Parameters.cpp  Parameters.h  Util.h
lib/mmseqs/src/linclust/: CMakeLists.txt  MarkovKmerScore.cpp  MarkovKmerScore.h  kmermatcher.cpp  kmermatcher.h  kmersearch.cpp  rymermatcher.cpp
lib/mmseqs/src/prefiltering/: Indexer.h  Prefiltering.cpp
lib/mmseqs/src/util/: createdb.cpp  createsubdb.cpp  extractorfs.cpp  renamedbkeys.cpp
lib/mmseqs/src/workflow/: Linclust.cpp
lib/mmseqs/util/: mmseqs_wrapper.bat
src/: CMakeLists.txt  LocalCommandDeclarations.h  carpedeam.cpp  plass.cpp
src/assembler/: CMakeLists.txt  ancientContigsResults.cpp  ancientReadsResults.cpp  correction.cpp  guidedassembleresult.cpp  none.prof  nuclassembleUtil.cpp  nuclassembleUtil.h  nuclassembleresult1.cpp  nuclassembleresult2.cpp  testUtils.cpp
src/commons/: LocalParameters.h
src/util/: createhdb.cpp
src/workflow/: CMakeLists.txt  GuidedNuclassembler.cpp  Nuclassembler.cpp
